--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,11 +22,11 @@ ion-menu.md ion-note {
   padding-left: 10px;
 }
 
-ion-menu.md ion-list#inbox-list {
+ion-menu.md ion-list#repassauto-list {
   border-bottom: 1px solid var(--ion-color-step-150, #d7d8da);
 }
 
-ion-menu.md ion-list#inbox-list ion-list-header {
+ion-menu.md ion-list#repassauto-list ion-list-header {
   font-size: 22px;
   font-weight: 600;
 
@@ -116,4 +116,9 @@ ion-note {
 
 ion-item.selected {
   --color: var(--ion-color-primary);
+}
+
+ion-item-divider{
+  margin-top: 0px;
+  min-height: 2px!important;
 }
