--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -153,11 +153,11 @@
    */
 
   .ios body {
-    --ion-background-color: #000000;
-    --ion-background-color-rgb: 0,0,0;
+    --ion-background-color: #ffffff;
+    --ion-background-color-rgb: 255,255,255;
 
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
+    --ion-text-color: #000000;
+    --ion-text-color-rgb: 0,0,0;
 
     --ion-color-step-50: #0d0d0d;
     --ion-color-step-100: #1a1a1a;
@@ -179,9 +179,14 @@
     --ion-color-step-900: #e6e6e6;
     --ion-color-step-950: #f2f2f2;
 
-    --ion-item-background: #000000;
+    --ion-item-background: #fefefe;
 
-    --ion-card-background: #1c1c1d;
+    --ion-toolbar-background: #fafafa;
+
+    --ion-tab-bar-background: #f5f5f5;
+
+    --ion-card-background: #f0f0f0;
+
   }
 
   .ios ion-modal {
@@ -197,11 +202,11 @@
    */
 
   .md body {
-    --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
+    --ion-background-color: #ffffff;
+    --ion-background-color-rgb: 255,255,255;
 
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
+    --ion-text-color: #000000;
+    --ion-text-color-rgb: 0,0,0;
 
     --ion-border-color: #222222;
 
@@ -225,12 +230,12 @@
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
-    --ion-item-background: #1e1e1e;
+    --ion-item-background: #fefefe;
 
-    --ion-toolbar-background: #1f1f1f;
+    --ion-toolbar-background: #fafafa;
 
-    --ion-tab-bar-background: #1f1f1f;
+    --ion-tab-bar-background: #f5f5f5;
 
-    --ion-card-background: #1e1e1e;
+    --ion-card-background: #f0f0f0;
   }
 }
