--- a/src/app/offers/offers.page.html
+++ b/src/app/offers/offers.page.html
@@ -14,48 +14,51 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-
-
       <ion-card *ngFor="let offer of offers">
         <ion-card-content>
 
-          <swiper [config]="config" (swiper)="onSwiper($event)" (slideChange)="onSlideChange()">
+            <swiper [config]="config" (swiper)="onSwiper($event)" (slideChange)="onSlideChange()">
 
-            <ng-template swiperSlide *ngFor="let photo of offer.photos">
-              <img src="{{ photo.base64 }}" width="100" height="100" />
-            </ng-template>
-
-          </swiper>
+              <ng-template swiperSlide *ngFor="let foto of offer.veiculoFotos">
+                teste {{ foto.ordem }}
+              </ng-template>
+  
+            </swiper>
 
           <ion-grid>
-            <ion-row aria-colspan="3">
-              <ion-col><ion-label><b>{{ offer.veiculo.preco }}</b></ion-label></ion-col>
-              <ion-col><ion-label>{{ offer.veiculo.marca }}</ion-label></ion-col>
-              <ion-col> <ion-label>{{ offer.veiculo.modelo }}</ion-label></ion-col>
+            <ion-row>
+              <ion-col>
+                <ion-label><b>{{ offer.veiculo.preco }}</b></ion-label>
+              </ion-col>
+              <ion-col>
+                <ion-label>{{ offer.veiculo.marca }}</ion-label>
+              </ion-col>
+              <ion-col>
+                <ion-label>{{ offer.veiculo.modelo }}</ion-label>
+              </ion-col>
             </ion-row>
             <ion-row>
             </ion-row>
             <ion-row aria-colspan="3">
-              <ion-col><ion-label>{{ offer.veiculo.versao }}</ion-label></ion-col>
+              <ion-col>
+                <ion-label>{{ offer.veiculo.versao }}</ion-label>
+              </ion-col>
             </ion-row>
             <ion-row aria-colspan="3">
-              <ion-col><ion-label>{{ offer.veiculo.descricao }}</ion-label></ion-col>
+              <ion-col>
+                <ion-label>{{ offer.veiculo.descricao }}</ion-label>
+              </ion-col>
             </ion-row>
             <ion-row aria-colspan="3">
-              <ion-col><ion-button>* Ver dados Completos</ion-button></ion-col>
+              <ion-col>
+                <ion-button>* Ver dados Completos</ion-button>
+              </ion-col>
             </ion-row>
           </ion-grid>
-          
-            
-           
-           
-
 
         </ion-card-content>
 
       </ion-card>
 
-  </div>
-  <p>* cobrança de tarifa para ver os dados de compra</p>
+      <p>* cobrança de tarifa para ver os dados de compra</p>
 </ion-content>
