--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,8 @@
+body {
+  font-family: "CorporateACon-Reg" !important;
+  background-color: #000;
+}
+
 ion-menu ion-content {
   --background: var(--ion-item-background, var(--ion-background-color, #fff));
 }
