--- a/src/app/myVehicles/myVehicles.page.scss
+++ b/src/app/myVehicles/myVehicles.page.scss
@@ -1,15 +1,44 @@
+@import '~swiper/scss';
+@import '~swiper/scss/autoplay';
+@import '~swiper/scss/keyboard';
+@import '~swiper/scss/pagination';
+@import '~swiper/scss/scrollbar';
+@import '~swiper/scss/zoom';
+@import '~@ionic/angular/css/ionic-swiper';
+
+
 ion-menu-button {
   color: var(--ion-color-primary);
 }
 
-#container {
-  text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-content {
+  display: block;
+  max-height: calc(98%) !important;
 }
+
+ion-label {
+  font-size: 12px;
+}
+
+ion-card {
+  width: 90%;
+  background-color: #d8d9e9;
+  color: #000000;
+  margin: 20px;
+  box-shadow: 5px 5px 5px rgb(66, 66, 66);
+}
+
+
+#container {
+  display: block;
+  max-height: calc(90%);
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  overflow-y: auto;
+  ::-webkit-scrollbar {
+    display: block;
+  }}
 
 #container strong {
   font-size: 20px;
@@ -17,12 +46,25 @@ ion-menu-button {
 }
 
 #container p {
-  font-size: 16px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 14px;
   line-height: 22px;
-  color: #8c8c8c;
-  margin: 0;
+  color: red;
+  margin-top: 15px;
+  margin: 5px;
 }
 
 #container a {
   text-decoration: none;
+}
+
+
+#agencia {
+  width: 95%!important;
+  font-size: 22px;
+  line-height: 22px;
+  color: #260975;
+  margin: 2px;
+  text-align: center;
 }
