--- a/src/app/myVehicles/vehicle/vehicle.page.scss
+++ b/src/app/myVehicles/vehicle/vehicle.page.scss
@@ -6,14 +6,14 @@
 @import '~swiper/scss/zoom';
 @import '~@ionic/angular/css/ionic-swiper';
 
-
 ion-menu-button {
   color: var(--ion-color-primary);
 }
 
 ion-content {
   display: block;
-  max-height: calc(98%) !important;
+  font-size: 20px !important;
+  max-height: calc(99%) !important;
 }
 
 ion-col {
@@ -26,7 +26,7 @@ ion-label {
   text-align: left;
   align-items: left;
   align-content: left;
-  font-size: 14px;
+  font-size: 20px;
   font-weight: 500;
 }
 
@@ -41,11 +41,9 @@ ion-card {
 
 
 ion-textarea {
-  width: 200px;
-  text-align: left;
-  align-items: left;
-  align-content: left;
-  font-size: 14px !important;
+  width: 100%;
+  text-align: justify;
+  font-size: 20px !important;
   font-weight: 500;
   border: 1px solid #5a5959;
   border-radius: 5px;
@@ -60,7 +58,7 @@ ion-input {
   text-align: left;
   align-items: left;
   align-content: left;
-  font-size: 14px !important;
+  font-size: 20px !important;
   font-weight: 500;
   border: 1px solid #5a5959;
   border-radius: 5px;
@@ -69,10 +67,35 @@ ion-input {
   padding: 4px !important;
 }
 
+ion-select {
+  height: 25px;
+  width: 200px;
+  text-align: left;
+  align-items: left;
+  align-content: left;
+  font-size: 20px !important;
+  font-weight: 500;
+  border: 1px solid #5a5959;
+  border-radius: 5px;
+  background: white;
+  color: black;
+  padding: 4px !important;
+}
+
+ion-button{
+  width:50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 900;
+  font-size: 20px !important;
+  text-align: center;
+}
 
 ion-item-divider {
   min-height: 2px !important;
 }
+
 
 
 .goBack {
@@ -81,14 +104,6 @@ ion-item-divider {
   margin: 10px;
 }
 
-#agencia {
-  width: 95% !important;
-  font-size: 22px;
-  line-height: 22px;
-  color: #260975;
-  margin: 2px;
-  text-align: center;
-}
 
 #box {
 
@@ -138,7 +153,7 @@ ion-item-divider {
 #container p {
   text-align: center;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 22px;
   color: red;
   margin-top: 15px;
@@ -151,40 +166,5 @@ ion-item-divider {
 
 
 
-ion-select {
-  height: 25px;
-  width: 200px;
-  text-align: left;
-  align-items: left;
-  align-content: left;
-  font-size: 14px !important;
-  font-weight: 500;
-  border: 1px solid #5a5959;
-  border-radius: 5px;
-  background: white;
-  color: black;
-  padding: 4px !important;
-}
 
-.my-custom-interface .action-sheet-button .sc-ion-action-sheet-md  {
-  background-color: #ff0000;
-  font-size: 30px !important;
-}
 
-.action-sheet-button  {
-  background-color: #ff0000;
-  font-size: 30px !important;
-}
-
-.action-sheet-button-inner 
-{
-  background-color: #ff0000;
-  font-size: 30px !important;
-
-}
-
-.sc-ion-action-sheet-md{
-  background-color: #ff0000;
-  font-size: 30px !important;
-
-}
