--- a/src/app/offers/vehicle-full/vehicle-full.page.scss
+++ b/src/app/offers/vehicle-full/vehicle-full.page.scss
@@ -12,15 +12,9 @@ ion-menu-button {
   color: var(--ion-color-primary);
 }
 
-ion-content {
-  display: block;
-  max-height: calc(98%) !important;
-}
-
 ion-label {
   text-align: left;
-  font-size: 12px;
-
+  font-size: 18px;
 }
 
 .lblInput {
@@ -28,11 +22,9 @@ ion-label {
   height: auto;
   font-weight: 900;
   text-align:justify;
-  font-size: 12px;
+  font-size: 20px;
   border-radius: 5px;
   color: black;
-
-
 }
 
 ion-card {
@@ -76,23 +68,22 @@ ion-item-divider {
   border-width: .01em; 
   border-style:solid; 
   margin-bottom : -1px;
-  background-color: lightgrey
+  background-color: rgb(230, 221, 221)
 }
 
 
-#agencia {
-  width: 95%!important;
-  font-size: 22px;
-  line-height: 22px;
-  color: #260975;
-  margin: 2px;
-  text-align: center;
-}
+ion-content {
+  display: block;
+  max-height: calc(98%) !important;
 
+  ion-icon {
+    font-size: 20px; 
+  }
+}
 
 #container {
   display: block;
-  max-height: calc(85%);
+  max-height: calc(90%);
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -104,14 +95,14 @@ ion-item-divider {
 }
 
 #container strong {
-  font-size: 20px;
+  font-size: 18px;
   line-height: 26px;
 }
 
 #container p {
   text-align: center;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 22px;
   color: red;
   margin-top: 15px;
